style: apply prettier
fix gravitee-io/issues#5460